--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
 
     </div>
 
+    <dialog class="modal">
+        <header class="modal-header">
+            <h1>You won!</h1>
+        </header>
+        <div class="modal-content">
+            <p>Congratulations you matched all cards in <span class="total-time"></span> seconds and won <span class="stars"></span> stars! Would you like to play again?</p>
+        </div>
+        <div class="modal-buttons">
+            <button class="yes-button">Yes</button>
+            <button class="no-button">No</button>
+        </div>
+    </dialog>
+
     <script src="js/app.js"></script>
 </body>
 </html>
